# pbl-project

./: .gitignore  README.md  pyproject.toml
brain_algorithms/: __init__.py  backprop.py  hebbian.py  som.py  spiking.py  stdp.py  visualization.py
examples/: demo_backprop.py  demo_hebbian.py  demo_som.py  demo_spiking.py  demo_stdp.py
tests/: test_backprop.py  test_hebbian.py  test_som.py  test_spiking.py  test_stdp.py
