[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-learning-algorithms"
version = "1.0.0"
description = "Human brain-inspired learning algorithms: Hebbian, SNN, SOM, STDP, Backpropagation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "matplotlib>=3.7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
